Last minute fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: landing
 							<header class="major">
 								<h2>Peter &hearts; Johanna</h2>
 								<p>Han, en föredetta jordgubbsblond kille från Svedala mötte Henne, en dansande tjej från Nacka och tillsammans fann de kärleken genom fiskpinnar, en sparkdräkt, Melodikrysset och en saxofonmelodi. 
-									Den 1 september ska vi föreviga vår kärlek och denna dag vill vi fira tillsammans med er. 
+									Den 1:a september ska vi föreviga vår kärlek och denna dag vill vi fira tillsammans med er. 
 									</p>
 							</header>
 						</div>
@@ -53,29 +53,24 @@ layout: landing
 								<h2>Vad mer behöver man mer veta?</h2>
 							</header>
 							<ul class="features">
-								<li>
+								<li class="icon fa-user">
 									<h3>Klädsel</h3>
 									<p>Klädkoden är Kavaj.</p>
 								</li>
-								<li>
+								<li class="icon fa-child">
 									<h3>Barn</h3>
 									<p>Barn är välkomna till kyrkan, medan kvällen önskar vi fira med deras föräldrar. Ammande barn är givetvis välkomna.</p>
 								</li>
-								<li>
+								<li class="icon fa-gift">
 									<h3>Presenter</h3>
 									<p>Er närvaro är bästa presenten till oss, vi har redan allt vi behöver - Men blir glada för ett bidrag till vår bröllopsresa. Enklast är att använda Swish på nummer 07600158 noll sex, eller använda bilden nedan i Swish-appen.</p>
 									<p><div class="image"> <img src="images/swish.png" alt="" /></div></p>
 								</li>
-								<li>
+								<li class="icon fa-calendar">
 									<h3>OSA</h3>
-									<p>OSA senast 31 juli till <a href="mailto:viklunds2018@gmail.com">viklunds2018@gmail.com</a>. Ange samtidigt eventuella allergier eller specialkost.</p>
+									<p>OSA senast 31 juli till <a href="mailto:viklunds2018@gmail.com">viklunds2018@gmail.com</a>. Ange samtidigt eventuella allergier eller specialkost. Önskar ni övernattning kan vi tipsa er om lämpliga ställen.</p>
 								</li>
 							</ul>
-						</div>
-					</section>
-					<section id="four" class="wrapper style 3 special">
-						<div class="inner">
-								<div id="instafeed"></div>
 						</div>
 					</section>
 					<section id="cta" class="wrapper style4">
