more text cahnges

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: landing
 								</li>
 								<li class="icon fa-gift">
 									<h3>Presenter</h3>
-									<p>Er närvaro är bästa presenten till oss, vi har redan allt vi behöver - Men blir glada för ett bidrag till vår bröllopsresa. Enklast är att använda Swish på nummer 07600158 noll sex, eller använda bilden nedan i Swish-appen.</p>
+									<p>Er närvaro är bästa presenten till oss, vi har redan allt vi behöver - Men blir glada för ett bidrag till vår bröllopsresa. Enklast är att använda Swish på nummer 07600158 noll sex, eller scanna bilden nedan med Swish-appen.</p>
 									<p><div class="image"> <img src="images/swish.png" alt="" /></div></p>
 								</li>
 								<li class="icon fa-calendar">
