new background color and some more info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@ layout: landing
 							<h2>{{ site.title }}</h2>
 							<p>{{ site.description | markdownify }}</p>
 						</div>
+						<ul class="actions">
+								<li><a href="https://www.instagram.com/explore/tags/viklunds2018/" target="_blank" class="button special">#viklunds2018</a></li>
+							</ul>
 						<a href="#one" class="more scrolly">Börja här</a>
 					</section>
 
@@ -27,13 +30,13 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Vigseln</h2>
-								<p>Vigseln äger rum i Stora Hammars gamla kyrka kl 15.00.</p>
+								<p>Vigseln äger rum i Stora Hammars gamla kyrka kl 15.00</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Festen</h2>
-								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag och fest. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil.</p>
+								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag och fest. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil</p>
 								<a href="https://goo.gl/maps/hgAMpzqTxZs" target="_blank">Vägbeskrivning</a>
 							</div>
 						</section>
@@ -55,21 +58,29 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-user">
 									<h3>Klädsel</h3>
-									<p>Klädkoden är Kavaj.</p>
+									<p>Klädkoden är Kavaj</p>
 								</li>
 								<li class="icon fa-child">
 									<h3>Barn</h3>
-									<p>Barn är välkomna till kyrkan, medan kvällen önskar vi fira med deras föräldrar. Ammande barn är givetvis välkomna.</p>
+									<p>Barn är välkomna till kyrkan, medan kvällen önskar vi fira med deras föräldrar. Ammande barn är givetvis välkomna</p>
 								</li>
 								<li class="icon fa-gift">
 									<h3>Presenter</h3>
-									<p>Er närvaro är bästa presenten till oss, vi har redan allt vi behöver - Men blir glada för ett bidrag till vår bröllopsresa. Enklast är att använda Swish på nummer 07600158 noll sex, eller scanna bilden nedan med Swish-appen.</p>
+									<p>Er närvaro är bästa presenten till oss, vi har redan allt vi behöver - Men blir glada för ett bidrag till vår bröllopsresa. Enklast är att använda Swish på nummer 07600158 noll sex, eller scanna bilden nedan med Swish-appen</p>
 									<p><div class="image"> <img src="images/swish.png" alt="" /></div></p>
 								</li>
 								<li class="icon fa-calendar">
 									<h3>OSA</h3>
-									<p>OSA senast 31 juli till <a href="mailto:viklunds2018@gmail.com">viklunds2018@gmail.com</a>. Ange samtidigt eventuella allergier eller specialkost. Önskar ni övernattning kan vi tipsa er om lämpliga ställen.</p>
+									<p>OSA senast 31 juli till <a href="mailto:viklunds2018@gmail.com">viklunds2018@gmail.com</a>. Ange samtidigt eventuella allergier eller specialkost</p>
 								</li>
+								<li class="icon fa-bed">
+										<h3>Logi</h3>
+										<p>Önskar ni övernattning kan vi tipsa er om lämpliga ställen</p>
+									</li>
+									<li class="icon fa-instagram">
+											<h3>Sociala medier</h3>
+											<p>Följ oss gärna på Instagram under hashtagen <a href="https://www.instagram.com/explore/tags/viklunds2018/" target="_blank">#viklunds2018</a>. Ni får såklart också gärna bidra med er egna bilder, använd bara vår hashtag #viklunds2018</p>
+										</li>
 							</ul>
 						</div>
 					</section>
@@ -78,6 +89,7 @@ layout: landing
 							<header>
 								<h2>Vi ser fram emot en fantastisk dag med er!</h2>
 								<p>Kram <br/>Peter och Johanna</p>
+								<p><a href="https://www.instagram.com/explore/tags/viklunds2018/" target="_blank">#viklunds2018</a></p>
 							</header>
 							<ul class="actions vertical">
 							</ul>
