Change some text information to be more detailed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Festen</h2>
-								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag och fest. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil</p>
+								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag och fest. Festen fortsätter fram till kl 02:00. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil</p>
 								<a href="https://goo.gl/maps/hgAMpzqTxZs" target="_blank">Vägbeskrivning</a>
 							</div>
 						</section>
@@ -58,7 +58,7 @@ layout: landing
 							<ul class="features">
 								<li class="icon fa-user">
 									<h3>Klädsel</h3>
-									<p>Klädkoden är Kavaj</p>
+									<p>Kavaj</p>
 								</li>
 								<li class="icon fa-child">
 									<h3>Barn</h3>
