--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: landing
 							<header class="major">
 								<h2>Peter &hearts; Johanna</h2>
 								<p>Han, en före detta jordgubbsblond kille från Svedala mötte Henne, en dansande tjej från Nacka och tillsammans fann de kärleken genom fiskpinnar, en sparkdräkt, Melodikrysset och en saxofonmelodi. 
-									Den 1:a september ska vi föreviga vår kärlek och denna dag vill vi fira tillsammans med er. 
+									Den 1:a september ska vi föreviga vår kärlek och denna dag vill vi fira tillsammans med er 
 									</p>
 							</header>
 						</div>
@@ -36,7 +36,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Festen</h2>
-								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag och fest. Festen fortsätter fram till kl 02:00. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil</p>
+								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag, fest och dans”. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil. Musiken tystnar kl 02.00 och vi svävar därefter iväg på egen hand som nattfjärilar i sensommarnatten.</p>
 								<a href="https://goo.gl/maps/hgAMpzqTxZs" target="_blank">Vägbeskrivning</a>
 							</div>
 						</section>
@@ -53,7 +53,7 @@ layout: landing
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Vad mer behöver man mer veta?</h2>
+								<h2>Vad mer behöver man veta?</h2>
 							</header>
 							<ul class="features">
 								<li class="icon fa-user">
@@ -70,7 +70,7 @@ layout: landing
 									</li>
 									<li class="icon fa-instagram">
 											<h3>Sociala medier</h3>
-											<p>Följ oss gärna på Instagram under hashtagen <a href="https://www.instagram.com/explore/tags/viklunds2018/" target="_blank">#viklunds2018</a>. Ni får såklart också gärna bidra med er egna bilder, använd bara vår hashtag #viklunds2018</p>
+											<p>Följ oss gärna på Instagram under hashtagen <a href="https://www.instagram.com/explore/tags/viklunds2018/" target="_blank">#viklunds2018</a>. Ni får såklart också gärna bidra med er egna bilder, använd bara vår hashtag #viklunds2018. Vi kommer även bjuda in er till Moments (app) där ni gärna får dela med er av era foton efter bröllopet</p>
 										</li>
 								<li class="icon fa-gift">
 									<h3>Presenter</h3>
