Fixed wrong char

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: landing
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
 								<h2>Festen</h2>
-								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag, fest och dans”. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil. Musiken tystnar kl 02.00 och vi svävar därefter iväg på egen hand som nattfjärilar i sensommarnatten.</p>
+								<p>Efter vigseln tar vi oss till Ljunghusens golfklubb för middag, fest och dans. Det är 10 km mellan kyrkan och festlokalen, däremellan tar ni er därför lämpligast med bil. Musiken tystnar kl 02.00 och vi svävar därefter iväg på egen hand som nattfjärilar i sensommarnatten.</p>
 								<a href="https://goo.gl/maps/hgAMpzqTxZs" target="_blank">Vägbeskrivning</a>
 							</div>
 						</section>
